ecmascript/parser/tests/typescript-errors/tsc/classes/nestedClassDeclaration/input.ts.stderr
error: Unexpected token `C2`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/typescript-errors/tsc/classes/nestedClassDeclaration/input.ts:5:11
  |
5 |     class C2 {
  |           ^^

